# hyperfine

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  conf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
doc/source/: conf.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
hyperfine/: __init__.py  demagnetization.py  distributions.py  dpass.py  minuit.py  srf.py  srim.py  superconductivity.py  utilities.py
hyperfine/bnmr/: __init__.py  lineshape.py  meissner.py  nlme.py  susceptibility.py  two_site.py
hyperfine/implantation/: __init__.py  electronic_stopping.py
hyperfine/musr/: __init__.py  _meissner.py  meissner.py
hyperfine/superconductivity/: __init__.py  _muhlschlegel.py  bcs.py  ccf.py  gle.py  interpolation.py  intertype.py  london.py  pippard.py
