[build-system]
requires = [
	"hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "hyperfine"
authors = [
	{ name = "Ryan M. L. McFadden", email = "rmlm@triumf.ca" },
]
summary = "A Python package providing miscellaneous tools to aid in materials science studies using implanted-ion NMR probes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Chemistry",
	"Topic :: Scientific/Engineering :: Physics",
]
keywords = [
	"β-NMR",
	"μSR",
	"ion-implantation",
	"SRIM",
	"DPASS",
	"superconductivity",
	"materials science",
	"condensed matter",
]
dependencies = [
	"numpy>=1.23.0",
	"scipy>=1.10.0",
	"iminuit>=2.24.0",
	"pandas>=1.5.0",
	"joblib>=1.2.0",
]
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/rmlmcfadden/hyperfine"
Documentation = "https://hyperfine.readthedocs.io/"
Repository = "https://github.com/rmlmcfadden/hyperfine.git"
Issues = "https://github.com/rmlmcfadden/hyperfine/issues"

[tool.hatch.version]
path = "hyperfine/_version.py"

[tool.hatch.build]
packages = [
	"hyperfine",
]
