[metadata]
name = hyperfine
author = Ryan M. L. McFadden
author-email = rmlm@triumf.ca
summary = A Python package providing miscellaneous tools to aid in materials science studies using implanted-ion NMR probes.
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/rmlmcfadden/hyperfine
project_urls =
    Bug Tracker = https://github.com/rmlmcfadden/hyperfine/issues
    Documentation = https://github.com/rmlmcfadden/hyperfine
    Source Code = https://github.com/rmlmcfadden/hyperfine
license = MIT
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
keywords =
    β-NMR
    μSR
    ion-implantation
    SRIM
    DPASS

[files]
packages =
    hyperfine

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
    fancy = pbr.cfg.driver:Fancy
