[metadata]
name = hyperfine
author = Ryan M. L. McFadden
author_email = rmlm@triumf.ca
summary = A Python package providing miscellaneous tools to aid in materials science studies using implanted-ion NMR probes.
description_file = README.md
description_content_type = text/markdown
home_page = https://github.com/rmlmcfadden/hyperfine
project_urls =
    Bug Tracker = https://github.com/rmlmcfadden/hyperfine/issues
    Documentation = https://github.com/rmlmcfadden/hyperfine
    Source Code = https://github.com/rmlmcfadden/hyperfine
license = MIT
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
keywords =
    β-NMR
    μSR
    ion-implantation
    SRIM
    DPASS

[files]
packages =
    hyperfine

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
    fancy = pbr.cfg.driver:Fancy

[pbr]
skip_git_sdist = 0
skip_changelog = 0
skip_authors = 0
skip_reno = 0

[build_sphinx]
builders = html,man
source-dir = doc/source
build-dir = doc/build
all-files = 1
warning-is-error = 0
